# console_parser

./: CMakeLists.txt  README.md  main.cpp
console_parser/: CMakeLists.txt  ConsoleParser.cpp  ConsoleParser.h
console_parser/tests/: ConsoleParserTests.cpp
